force-app/main/default/objects/Surgeon_Plan__c/Surgeon_Plan__c.object-meta.xml
<CustomObject>
    <label>Surgeon Plan</label>
    <nameField>
        <displayFormat>SP# {00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Surgeon Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>