force-app/main/default/objects/Surgeon_Plan__c/fields/Buying_decision_factors__c.field-meta.xml
<CustomField>
    <fullName>Buying_decision_factors__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>What is the most important to the surgeon while making a buying decision (Technical Information, relationship with rep, cost, etc)?</inlineHelpText>
    <label>Buying decision factors</label>
    <length>150</length>
    <type>Text</type>
</CustomField>