force-app/main/default/objects/Surgeon_Plan__c/fields/Details_of_interaction__c.field-meta.xml
<CustomField>
    <fullName>Details_of_interaction__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Tone of interaction with surgeon - Detailed feedback</inlineHelpText>
    <label>Details of interaction</label>
    <length>555</length>
    <type>LongTextArea</type>
</CustomField>