force-app/main/default/objects/Surgeon_Plan__c/fields/Number_of_years_of_experience__c.field-meta.xml
<CustomField>
    <fullName>Number_of_years_of_experience__c</fullName>
    <inlineHelpText>How many years, approximately, has the surgeon been operating?</inlineHelpText>
    <label>Number of years of experience</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>