force-app/main/default/objects/Surgeon_Plan__c/fields/People_who_are_influenced_by_surgeon__c.field-meta.xml
<CustomField>
    <fullName>People_who_are_influenced_by_surgeon__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Who does the surgeon have influence over? How do they influence them? Why are they able to influence that person?</inlineHelpText>
    <label>People who are influenced by surgeon</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>