force-app/main/default/objects/Surgeon_Plan__c/fields/People_who_influence_the_surgeon__c.field-meta.xml
<CustomField>
    <fullName>People_who_influence_the_surgeon__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Who are the people who influence the surgeon? How do they influence the surgeon? Why are they able to influence them?</inlineHelpText>
    <label>People who influence the surgeon</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>