force-app/main/default/objects/Surgeon_Plan__c/fields/Relationship_history_with_surgeon__c.field-meta.xml
<CustomField>
    <fullName>Relationship_history_with_surgeon__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>What&apos;s the history of your relationship?</inlineHelpText>
    <label>Relationship History with surgeon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>