force-app/main/default/objects/Surgeon_Plan__c/fields/Relationship_with_the_surgeon__c.field-meta.xml
<CustomField>
    <fullName>Relationship_with_the_surgeon__c</fullName>
    <inlineHelpText>What is your relationship with the surgeon?</inlineHelpText>
    <label>Relationship with the surgeon</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Fair</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>