force-app/main/default/objects/Surgeon_Plan__c/fields/Surgeon_Background_and_Practice_History__c.field-meta.xml
<CustomField>
    <fullName>Surgeon_Background_and_Practice_History__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>What was the surgeon&apos;s background? What was their practice history(i.e. residency, fellowship etc)?</inlineHelpText>
    <label>Surgeon Background and Practice History</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>