force-app/main/default/objects/Surgeon_Plan__c/fields/Surgeon_operating_location__c.field-meta.xml
<CustomField>
    <fullName>Surgeon_operating_location__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Where does the surgeon operate?</inlineHelpText>
    <label>Surgeon operating location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>