force-app/main/default/objects/Surgeon_Plan__c/fields/Tone_of_interaction__c.field-meta.xml
<CustomField>
    <fullName>Tone_of_interaction__c</fullName>
    <inlineHelpText>How would you descibe the general tone of your interactions with the surgeon?</inlineHelpText>
    <label>Tone of interaction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Fair</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>