force-app/main/default/objects/Surgeon_Plan__c/fields/Zimmer_Biomet_Friendly_Competitive__c.field-meta.xml
<CustomField>
    <fullName>Zimmer_Biomet_Friendly_Competitive__c</fullName>
    <inlineHelpText>Would you consider this a Zimmer Biomet friendly surgeon or competetive surgeon?</inlineHelpText>
    <label>Zimmer Biomet Friendly or Competitive?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Friendly</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Competitive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>