force-app/main/default/objects/Surgeon_Plan__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Surgeon_Name__c</columns>
    <columns>Surgeon_operating_location__c</columns>
    <columns>Number_of_years_of_experience__c</columns>
    <columns>Zimmer_Biomet_Friendly_Competitive__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>